PyMaker/datas/object2/RawHTML/i14201/Python_DOC_referPages.python-built-in-methods.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/10955703/accessing-a-python-int-literals-methods">accessing a python int literals methods [duplicate]</a>
</li>
</ul>
</div>
<p>I can call <code>str</code> methods on string literal. But I cannot call <code>int</code> methods on a integer number literal:</p>
<pre><code>Python 2.7.5+ (default, Sep 19 2013, 13:48:49) 
&gt;&gt;&gt; 1.bit_length()
  File "&lt;stdin&gt;", line 1
    1.bit_length()
               ^
SyntaxError: invalid syntax
&gt;&gt;&gt; a = 1
&gt;&gt;&gt; a.bit_length()
1
&gt;&gt;&gt; ', '.join(['1', '2'])
'1, 2'
&gt;&gt;&gt; 
</code></pre>
<p>Why is that?</p>
</div>
<div class="post-text" itemprop="text">
<p>Python treats <code>1.</code> as a beginning of a float number, but fails to parse the rest of the line. Change it to</p>
<pre><code>(1).bit_length()
</code></pre>
<p>by enclosing the number literal with parenthesis, we make sure that python evaluates the expression within the parens, which is <code>1</code> and call the method on that number.</p>
<p>Python defines <a href="http://docs.python.org/3/reference/lexical_analysis.html#floating-point-literals" rel="nofollow">floating point literal</a> like this</p>
<pre><code>floatnumber   ::=  pointfloat | exponentfloat
pointfloat    ::=  [intpart] fraction | intpart "."
exponentfloat ::=  (intpart | pointfloat) exponent
intpart       ::=  digit+
fraction      ::=  "." digit+
exponent      ::=  ("e" | "E") ["+" | "-"] digit+
</code></pre>
<p>As per that definition, the lexical analyzer thinks that <code>1.bit_length()</code> would be a float literal, since <code>1.</code> matches the <code>[intpart] fraction</code>'s beginning. But the rest of the line doesn't match. That is why it fails.</p>
</div>
<span class="comment-copy"><code>1 .bit_length()</code> should also work, but it's ugly.</span>
<span class="comment-copy">How does Ruby handle <code>3.times</code>?</span>
